set up api router and accounts model

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.1",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "helmet": "^3.21.3",
     "nodemon": "^1.19.4"
   }
 }
